[gd_scene load_steps=7 format=3 uid="uid://b8o0mkh00u0lv"]

[ext_resource type="PackedScene" uid="uid://bf5q4rns8aqgs" path="res://scenes/player.tscn" id="1_hsyb7"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_qvig0"]
[ext_resource type="PackedScene" uid="uid://cwx1450dr3j8g" path="res://scenes/enemy_spawner.tscn" id="3_7dobd"]
[ext_resource type="FontFile" uid="uid://k2oif2gdu5j" path="res://assets/fonts/PublicPixel-z84yD.ttf" id="4_gae24"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64pdg"]
size = Vector2(56, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rovys"]
size = Vector2(854, 70)

[node name="World" type="Node2D"]
script = ExtResource("1_qvig0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 854.0
offset_bottom = 480.0
color = Color(0, 0, 0, 1)

[node name="Walls" type="Area2D" parent="." groups=["walls"]]
collision_layer = 8
collision_mask = 3

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 240)
shape = SubResource("RectangleShape2D_64pdg")

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2(854, 240)
shape = SubResource("RectangleShape2D_64pdg")

[node name="EnemySpawner" parent="." instance=ExtResource("3_7dobd")]
position = Vector2(427, 0)

[node name="ProjectileGarbage" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 20

[node name="Top" type="CollisionShape2D" parent="ProjectileGarbage"]
position = Vector2(427, -35)
shape = SubResource("RectangleShape2D_rovys")

[node name="Bottom" type="CollisionShape2D" parent="ProjectileGarbage"]
position = Vector2(427, 515)
shape = SubResource("RectangleShape2D_rovys")

[node name="Player" parent="." instance=ExtResource("1_hsyb7")]
position = Vector2(427, 450)

[node name="LivesLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 462.0
offset_right = 78.0
offset_bottom = 476.0
theme_override_fonts/font = ExtResource("4_gae24")
theme_override_font_sizes/font_size = 10
text = "Lives: "

[node name="PointsLabel" type="Label" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 83.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("4_gae24")
theme_override_font_sizes/font_size = 10
text = "Points: "

[node name="PlayerRespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Walls" to="EnemySpawner" method="_on_walls_area_entered"]
[connection signal="bomb_shot" from="EnemySpawner" to="." method="_on_enemy_spawner_bomb_shot"]
[connection signal="area_entered" from="ProjectileGarbage" to="." method="_on_projectile_garbage_area_entered"]
[connection signal="bullet_shot" from="Player" to="." method="_on_player_bullet_shot"]
[connection signal="destroyed" from="Player" to="." method="_on_player_destroyed"]
[connection signal="timeout" from="PlayerRespawnTimer" to="." method="_on_player_respawn_timer_timeout"]
